<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".StartActivity$PlaceholderFragment"
    android:gravity="center"
    android:background="@color/bgColor">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_howtoplay"
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal"
        android:textSize="35dp"
        android:layout_marginBottom="30dp"
        android:textStyle="bold"
        android:textColor="@color/colorAccent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text_howtoplay"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_start"
        android:id="@+id/btnStartFromHow"
        android:layout_gravity="center_horizontal"
        android:background="@color/flat_green"
        android:textStyle="bold"
        android:textColor="@android:color/white" />

</LinearLayout>
