<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".StartActivity$PlaceholderFragment"
    android:gravity="center"
    android:background="@color/bgColor">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:text="@string/app_name"
        android:textSize="40dp"
        android:layout_marginBottom="30dp"
        android:textStyle="bold"
        android:textColor="@color/colorAccent" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_start"
        android:id="@+id/btnStart"
        android:layout_gravity="center_horizontal"
        android:background="@color/flat_green"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_marginBottom="10dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_howtoplay"
        android:id="@+id/btnHow"
        android:layout_gravity="center_horizontal"
        android:background="@color/flat_purple"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

    </LinearLayout>

</LinearLayout>
