<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.kreativ.spherocolors.PreGameFragment"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/bgColor"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_game_select"
        android:id="@+id/textView4"
        android:layout_gravity="center_horizontal"
        android:textSize="35dp"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"
        android:textColor="@color/colorAccent" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:text="@string/btn_yes"
            android:id="@+id/btnReadYes"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:text="@string/btn_no"
            android:id="@+id/btnReadNo"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>