<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/high_score"
            android:id="@+id/textView9"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="0"
            android:id="@+id/txtHighScore"
            android:layout_marginLeft="10dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/text_time"
                android:id="@+id/textView7"
                android:textSize="25sp"
                android:textAlignment="center"
                android:textStyle="bold" />

            <Chronometer
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/timer"
                android:visibility="visible"
                android:width="15dp"
                android:textSize="50sp"
                android:gravity="center"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/score"
                android:id="@+id/textView5"
                android:textSize="25sp"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="0"
                android:id="@+id/txtScore"
                android:textSize="50sp"
                android:textAlignment="center"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/grid1"
        android:rowCount="4"
        android:columnCount="3"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <Button
            android:layout_width="160dp"
            android:layout_height="80dp"
            android:id="@+id/btnColorRed"
            android:layout_row="1"
            android:layout_column="1"
            android:backgroundTint="@color/flat_red" />

        <Button
            android:layout_width="160dp"
            android:layout_height="80dp"
            android:id="@+id/btnColorYellow"
            android:layout_row="2"
            android:layout_column="1"
            android:backgroundTint="#ede319" />

        <Button
            android:layout_width="160dp"
            android:layout_height="80dp"
            android:id="@+id/btnColorBlue"
            android:layout_row="1"
            android:layout_column="2"
            android:backgroundTint="@color/flat_blue" />

        <Button
            android:layout_width="160dp"
            android:layout_height="80dp"
            android:id="@+id/btnColorGreen"
            android:layout_row="2"
            android:layout_column="2"
            android:backgroundTint="@color/flat_green" />

        <Button
            android:layout_width="160dp"
            android:layout_height="80dp"
            android:id="@+id/btnColorPurple"
            android:layout_row="3"
            android:layout_column="1"
            android:backgroundTint="@color/flat_purple" />

        <Button
            android:layout_width="160dp"
            android:layout_height="80dp"
            android:id="@+id/btnColorPink"
            android:layout_row="3"
            android:layout_column="2"
            android:backgroundTint="@color/flat_pink" />

    </GridLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:text="@string/start_game"
        android:id="@+id/btnBegin"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/white" />


</LinearLayout>